--- a/.eslintrc
+++ b/.eslintrc
@@ -13,18 +13,18 @@
     "react/jsx-key": "warn", // 반복문으로 생성하는 요소에 key 강제
     "react/self-closing-comp": "warn", // 셀프 클로징 태그 가능하면 적용
     "react/jsx-curly-brace-presence": "warn", // jsx 내 불필요한 중괄호 금지
-
+    "prettier/prettier": "error",
     "import/order": [
       "error",
       {
         "pathGroups": [
           {
             "pattern": "react*",
-            "group": "builtin",
+            "group": "builtin"
           },
           {
             "pattern": "react-*/**",
-            "group": "builtin",
+            "group": "builtin"
           },
           { "pattern": "@src/**", "group": "external", "position": "after" },
           { "pattern": "@routes/**", "group": "external", "position": "after" },
@@ -35,17 +35,16 @@
           {
             "pattern": "@components/**",
             "group": "external",
-            "position": "after",
+            "position": "after"
           },
-          { "pattern": "@pages/**", "group": "external", "position": "after" },
+          { "pattern": "@pages/**", "group": "external", "position": "after" }
         ],
 
         "pathGroupsExcludedImportTypes": ["react*"],
         "alphabetize": {
-          "order": "asc",
-        },
-      },
-    ],
-    "prettier/prettier": "error",
-  },
+          "order": "asc"
+        }
+      }
+    ]
+  }
 }
